# ffmpeg-cpp-video-processes

./: .gitignore  README.md
ffmpeg-video-avfilter/: CMakeLists.txt  README.md
ffmpeg-video-avfilter/src/: decoder.cpp  decoder.h  main.cpp
ffmpeg-video-avstream/: CMakeLists.txt  README.md
ffmpeg-video-avstream/src/: decoder.cpp  decoder.h  main.cpp
ffmpeg-video-decoder/: CMakeLists.txt  README.md
ffmpeg-video-decoder/src/: decoder.cpp  decoder.h  main.cpp
ffmpeg-video-image-push/: CMakeLists.txt  README.md
ffmpeg-video-image-push/src/: decoder.cpp  decoder.h  main.cpp
ffmpeg-video-overlay/: CMakeLists.txt  README.md
ffmpeg-video-overlay/src/: decoder.cpp  decoder.h  main.cpp  trans_image.h
ffmpeg-video-transcoder/: CMakeLists.txt  README.md
ffmpeg-video-transcoder/src/: decoder.cpp  decoder.h  main.cpp  time_util.h
